Fixed the double border top with the menu

--- a/assets/snippet-menu.css
+++ b/assets/snippet-menu.css
@@ -25,6 +25,10 @@
   border-top: 1px solid var(--neutral-200);
 }
 
+.header-fixed ~ .menu-drawer__container > .menu-drawer {
+  border-top: none !important;
+}
+
 .menu-drawer__inner {
   display: flex;
   height: 100%;
